sumo/tests/netgen/junction_types/errors/error__unknown_junction_type/options.netgen
--default-junction-type xxx --grid-net --grid-number=10 --grid-length=400 --output-file=net.net.xml -v
